started Jwt authentication, using security filter chain, as per spring security5.7 and up